--- a/app/src/main/res/layout/activity_arrosage.xml
+++ b/app/src/main/res/layout/activity_arrosage.xml
@@ -4,12 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/arossageList"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
 
+        android:orientation="vertical"
+        android:fillViewport="true"
+        android:padding="10dp">
 
-    </ListView>
+        <ListView
+            android:id="@+id/arossageList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <!-- Your ListView content here -->
+
+        </ListView>
+
+    </ScrollView>
 
 </FrameLayout>
