--- a/app/src/main/res/layout/iteam_arossage.xml
+++ b/app/src/main/res/layout/iteam_arossage.xml
@@ -13,6 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="122dp"
         android:text="TextView"
+        android:textSize="16sp"
+        android:textColor="#666666"
         />
 
 
@@ -23,6 +25,8 @@
         android:layout_alignStart="@+id/idA"
         android:layout_marginStart="0dp"
         android:layout_marginTop="20dp"
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:text="TextView" />
 
     <TextView
@@ -32,7 +36,8 @@
         android:layout_alignStart="@+id/idA"
         android:layout_marginStart="0dp"
         android:layout_marginTop="40dp"
-
+        android:textSize="16sp"
+        android:textColor="#00BCD4"
         android:text="TextView" />
 
     <TextView
@@ -41,6 +46,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="50dp"
+        android:textSize="16sp"
+        android:textColor="#666666"
         android:text="Id :"
         />
 
@@ -61,7 +68,8 @@
         android:layout_alignStart="@+id/idAr"
         android:layout_marginStart="0dp"
         android:layout_marginTop="40dp"
-
+        android:textSize="16sp"
+        android:textColor="#666666"
         android:text="litresEau :" />
 
 
