--- a/app/src/main/res/layout/iteamplantage.xml
+++ b/app/src/main/res/layout/iteamplantage.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="122dp"
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:text="TextView"
         />
 
@@ -22,6 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/idP"
         android:layout_marginStart="0dp"
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:layout_marginTop="20dp"
         android:text="TextView" />
 
@@ -34,7 +38,8 @@
         android:layout_alignStart="@+id/idP"
         android:layout_marginStart="0dp"
         android:layout_marginTop="40dp"
-
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:text="TextView" />
     <TextView
         android:id="@+id/idPplante"
@@ -43,7 +48,8 @@
         android:layout_alignStart="@+id/idP"
         android:layout_marginStart="0dp"
         android:layout_marginTop="60dp"
-
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:text="TextView" />
 
     <TextView
@@ -53,6 +59,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="50dp"
         android:text="Id :"
+        android:textSize="16sp"
+        android:textColor="#050505"
         />
 
 
@@ -63,6 +71,8 @@
         android:layout_alignStart="@+id/idAr"
         android:layout_marginStart="0dp"
         android:layout_marginTop="20dp"
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:text="Nombre : :" />
 
     <TextView
@@ -72,7 +82,8 @@
         android:layout_alignStart="@+id/idAr"
         android:layout_marginStart="0dp"
         android:layout_marginTop="40dp"
-
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:text="Date  :" />
 
     <TextView
@@ -82,7 +93,8 @@
         android:layout_alignStart="@+id/idAr"
         android:layout_marginStart="0dp"
         android:layout_marginTop="60dp"
-
+        android:textSize="16sp"
+        android:textColor="#050505"
         android:text="Plante:" />
 
 
